@@ -1,3 +1,5 @@
+2009-02-26 Support image clipping in pdf backend. - JKS
+
 2009-02-16 Move plot_directive.py to the installed source tree.  Add
            support for inline code content - MGD
 
